  . libpq (PostgreSQL) to version 8.2.3
- Upgraded SQLite 3 to version 3.3.13 (Ilia)
- Upgraded PCRE to version 7.0 (Nuno)
- Added --ri switch to CLI which allows to check extension information. (Marcus)
- Added tidyNode::getParent() method (John, Nuno)
- Fixed zend_llist_remove_tail (Michael Wallner, Dmitry)
- Fixed bug #40621 (Crash when constructor called inappropriately). (Tony)
- Fixed bug #40606 (umask is not being restored when request is finished). 
  (Tony)
- Fixed bug #40598 (libxml segfault). (Rob)
- Fixed bug #40578 (imagettftext() multithreading issue). (Tony, Pierre)
- Fixed bug #40576 (double values are truncated to 6 decimal digits when 
  encoding). (Tony)
- Fixed bug #40560 (DIR functions do not work on root UNC path). (Dmitry)
- Fixed bug #40548 (SplFileInfo::getOwner/getGroup give a warning on broken
  symlink). (Marcus)
- Fixed bug #40546 (SplFileInfo::getPathInfo() throws an execption if directory
  is in root dir). (Marcus)
- Fixed bug #40545 (multithreading issue in zend_strtod()). (Tony)
- Fixed bug #40503 (json_encode() value corruption on 32bit systems with 
  overflown values). (Ilia)
- Fixed bug #40467 (Partial SOAP request sent when XSD sequence or choice
  include minOccurs=0). (Dmitry) 
- Fixed bug #40465 (Ensure that all PHP elements are printed by var_dump).
  (wharmby at uk dot ibm dot com, Ilia)
- Fixed bug #40455 (proc_open() uses wrong commandline when safe_mode_exec_dir 
  is set). (Tony)
- Fixed bug #40432 (strip_tags() fails with greater than in attribute). (Ilia)
- Fixed bug #40431 (dynamic properties may cause crash in ReflectionProperty 
  methods). (Tony)
- Fixed bug #40451 (addAttribute() may crash when used with non-existent child 
  node). (Tony)
- Fixed bug #40428 (imagepstext() doesn't accept optional parameter). (Pierre)
- Fixed bug #40414 (possible endless fork() loop when running fastcgi).
  (Dmitry)
- Fixed bug #40410 (ext/posix does not compile on MacOS 10.3.9). (Tony)